[project]
name = "job-hunt-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.5"
dependencies = [
  "langchain",
  "langchain-community",
  "dotenv",
  "langchain-ollama",
  "langchain-chroma",
  "unstructured",
  "unstructured[odt]",
  "unstructured[docx]",
  "cryptography",
  "pypdf",
  "pyright>=1.1.408",
  "streamlit>=1.55.0",
  "selenium>=4.41.0",
  "htbuilder>=0.9.0",
]
