[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-hunt-prep"
version = "0.1.0"
description = "AI assitant for job application questionnaires using LangChain, Streamlit, and Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
license-files = ["LICENSE"]
authors = [
  {name = "José Agustín Moreno-Larios", email = "jose.agustin.moreno.larios@gmail.com"}
]

keywords = ["langchain", "ollama", "streamlit", "job-hunt", "ai-assistant"]

classifiers = [
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = [
  "langchain",
  "langchain-community",
  "dotenv",
  "langchain-ollama",
  "langchain-chroma",
  "unstructured",
  "unstructured[odt]",
  "unstructured[docx]",
  "cryptography",
  "pypdf",
  "streamlit>=1.55.0",
  "selenium>=4.41.0",
  "htbuilder>=0.9.0",
  "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/JAMoreno-Larios/job-hunt-prep"
Issues = "https://github.com/JAMoreno-Larios/job-hunt-prep/issues"

[project.scripts]
job-hunt-prep = "job_hunt_prep.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/job_hunt_prep"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.8",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
